Backed out 4 changesets (bug 1927404) - for causing dt failures on browser_command_line_urls.js.
Backed out changeset 57e3626aa048 (bug 1927404)
Backed out changeset 0ee04fe4a1bc (bug 1927404)
Backed out changeset 1e68482cff47 (bug 1927404)
Backed out changeset 8b5961223d94 (bug 1927404)

UltraBlame original commit: 63b6a5a732ea0fcd7ba031c5adc6a4c1f3520755

--- a/parser/htmlparser/tests/reftest/bug1153920-1-ref.html
+++ b/parser/htmlparser/tests/reftest/bug1153920-1-ref.html
@@ -85,7 +85,7 @@ size
 "
 >
 <
-span
+pre
 id
 =
 "
@@ -121,7 +121,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -131,6 +130,14 @@ id
 "
 line2
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -517,7 +524,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -527,6 +533,14 @@ id
 "
 line3
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -967,7 +981,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -981,6 +994,14 @@ line4
 <
 /
 span
+>
+<
+/
+span
+>
+<
+/
+pre
 >
 <
 /
