--- a/parser/htmlparser/tests/reftest/bug1650087-1-ref.html
+++ b/parser/htmlparser/tests/reftest/bug1650087-1-ref.html
@@ -85,12 +85,19 @@ size
 "
 >
 <
-span
+pre
 id
 =
 "
 line1
 "
+>
+<
+span
+>
+<
+/
+span
 >
 <
 span
@@ -114,7 +121,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -124,6 +130,14 @@ id
 "
 line2
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -149,6 +163,13 @@ span
 &
 gt
 ;
+<
+/
+span
+>
+<
+span
+>
 <
 /
 span
@@ -218,7 +239,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -228,6 +248,14 @@ id
 "
 line3
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -253,6 +281,13 @@ span
 &
 gt
 ;
+<
+/
+span
+>
+<
+span
+>
 <
 /
 span
@@ -322,7 +357,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -332,6 +366,14 @@ id
 "
 line4
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -357,6 +399,13 @@ span
 &
 gt
 ;
+<
+/
+span
+>
+<
+span
+>
 <
 /
 span
@@ -426,7 +475,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -436,6 +484,14 @@ id
 "
 line5
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -461,6 +517,13 @@ span
 &
 gt
 ;
+<
+/
+span
+>
+<
+span
+>
 <
 /
 span
@@ -530,7 +593,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -540,6 +602,14 @@ id
 "
 line6
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -565,6 +635,13 @@ span
 &
 gt
 ;
+<
+/
+span
+>
+<
+span
+>
 <
 /
 span
@@ -634,7 +711,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -644,6 +720,14 @@ id
 "
 line7
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -669,6 +753,13 @@ span
 &
 gt
 ;
+<
+/
+span
+>
+<
+span
+>
 <
 /
 span
@@ -738,7 +829,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -752,6 +842,14 @@ line8
 <
 /
 span
+>
+<
+/
+span
+>
+<
+/
+pre
 >
 <
 /
