--- a/parser/htmlparser/tests/reftest/bug1726374-1-ref.html
+++ b/parser/htmlparser/tests/reftest/bug1726374-1-ref.html
@@ -85,7 +85,7 @@ size
 "
 >
 <
-span
+pre
 id
 =
 "
@@ -160,14 +160,6 @@ span
 >
 b
 <
-/
-span
->
-<
-/
-span
->
-<
 span
 id
 =
@@ -178,6 +170,14 @@ line2
 <
 /
 span
+>
+<
+/
+span
+>
+<
+/
+pre
 >
 <
 /
