--- a/parser/htmlparser/tests/reftest/bug482921-1-ref.html
+++ b/parser/htmlparser/tests/reftest/bug482921-1-ref.html
@@ -65,7 +65,7 @@ highlight
 "
 >
 <
-span
+pre
 id
 >
 <
@@ -90,12 +90,15 @@ gt
 span
 >
 <
+span
+id
+>
+<
 /
 span
 >
 <
 span
-id
 >
 &
 lt
@@ -125,6 +128,13 @@ span
 <
 span
 id
+>
+<
+/
+span
+>
+<
+span
 >
 &
 lt
@@ -155,6 +165,13 @@ span
 span
 id
 >
+<
+/
+span
+>
+<
+span
+>
 &
 lt
 ;
@@ -176,6 +193,10 @@ span
 &
 gt
 ;
+<
+/
+span
+>
 <
 span
 >
@@ -214,12 +235,15 @@ gt
 span
 >
 <
+span
+id
+>
+<
 /
 span
 >
 <
 span
-id
 >
 &
 lt
@@ -247,12 +271,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 var
 lt
@@ -264,12 +288,12 @@ lt
 "
 ;
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 &
 lt
@@ -278,12 +302,12 @@ lt
 -
 -
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 var
 s
@@ -308,12 +332,12 @@ gt
 "
 ;
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 -
 -
@@ -321,12 +345,12 @@ id
 gt
 ;
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -390,12 +414,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -426,12 +450,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 /
 *
@@ -446,12 +470,12 @@ gt
 *
 /
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -483,12 +507,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -520,12 +544,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -556,12 +580,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -654,12 +678,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -726,12 +750,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -808,12 +832,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -844,12 +868,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -948,12 +972,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -1054,12 +1078,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -1091,12 +1115,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -1128,12 +1152,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -1165,16 +1189,16 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
 >
 <
 /
 span
+>
+<
+/
+pre
 >
 <
 !
