--- a/parser/htmlparser/tests/reftest/bug482921-2-ref.html
+++ b/parser/htmlparser/tests/reftest/bug482921-2-ref.html
@@ -65,7 +65,7 @@ highlight
 "
 >
 <
-span
+pre
 id
 >
 <
@@ -104,12 +104,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -134,12 +134,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -170,12 +170,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -206,12 +206,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -279,12 +279,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -315,12 +315,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 var
 s
@@ -394,12 +394,12 @@ span
 "
 ;
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -416,24 +416,12 @@ lt
 -
 -
 <
-/
-span
->
-<
-/
-span
->
-<
 span
 id
 >
 <
+/
 span
-class
-=
-"
-comment
-"
 >
 var
 s
@@ -458,24 +446,12 @@ gt
 "
 ;
 <
-/
-span
->
-<
-/
-span
->
-<
 span
 id
 >
 <
+/
 span
-class
-=
-"
-comment
-"
 >
 -
 -
@@ -487,16 +463,12 @@ gt
 span
 >
 <
-/
-span
->
-<
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -528,12 +500,19 @@ gt
 span
 >
 <
+span
+>
+<
 /
 span
 >
 <
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -564,12 +543,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 /
 *
@@ -612,12 +591,12 @@ span
 *
 /
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -649,12 +628,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -686,12 +665,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -722,12 +701,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -820,12 +799,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -920,12 +899,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -1051,12 +1030,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -1087,12 +1066,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -1191,12 +1170,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -1297,12 +1276,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -1334,12 +1313,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -1371,12 +1350,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 <
 span
@@ -1408,16 +1387,16 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
 >
 <
 /
 span
+>
+<
+/
+pre
 >
 <
 !
