--- a/parser/htmlparser/tests/reftest/bug535530-2-ref.html
+++ b/parser/htmlparser/tests/reftest/bug535530-2-ref.html
@@ -65,7 +65,7 @@ highlight
 "
 >
 <
-span
+pre
 id
 >
 <
@@ -90,12 +90,12 @@ gt
 span
 >
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 XX
 &
@@ -103,12 +103,12 @@ amp
 ;
 XX
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 XX
 &
@@ -116,12 +116,12 @@ amp
 ;
 nXX
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 XX
 &
@@ -129,12 +129,12 @@ amp
 ;
 noXX
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 XX
 <
@@ -156,12 +156,12 @@ span
 >
 XX
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 XX
 <
@@ -183,12 +183,12 @@ span
 >
 XX
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 XX
 <
@@ -210,12 +210,12 @@ span
 >
 XX
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 XX
 &
@@ -224,12 +224,12 @@ amp
 ;
 XX
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 XX
 <
@@ -251,12 +251,12 @@ n
 ;
 XX
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 XX
 <
@@ -278,12 +278,12 @@ no
 ;
 XX
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 XX
 <
@@ -305,12 +305,12 @@ span
 >
 XX
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 XX
 <
@@ -333,12 +333,12 @@ span
 ;
 XX
 <
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
 >
 XX
 <
@@ -360,10 +360,6 @@ span
 >
 XX
 <
-/
-span
->
-<
 span
 id
 >
@@ -378,6 +374,10 @@ id
 <
 /
 span
+>
+<
+/
+pre
 >
 <
 !
