--- a/parser/htmlparser/tests/reftest/bug731234-1-ref.html
+++ b/parser/htmlparser/tests/reftest/bug731234-1-ref.html
@@ -65,7 +65,7 @@ highlight
 "
 >
 <
-span
+pre
 id
 >
 <
@@ -90,12 +90,19 @@ gt
 span
 >
 <
-/
 span
 >
 <
 span
 id
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -129,16 +136,16 @@ span
 span
 >
 <
-/
-span
->
-<
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -209,16 +216,16 @@ span
 >
 X
 <
-/
-span
->
-<
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -289,16 +296,16 @@ span
 >
 X
 <
-/
-span
->
-<
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -358,33 +365,35 @@ script
 span
 >
 <
-/
-span
->
-<
-/
-span
->
-<
 span
 id
 >
+<
+/
+span
+>
+&
+gt
+;
+<
+/
+span
 >
 <
 span
 >
 X
 <
-/
-span
->
-<
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -484,16 +493,16 @@ span
 >
 X
 <
-/
-span
->
-<
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -526,813 +535,6 @@ span
 <
 span
 >
-<
-/
-span
->
-<
-span
-title
-=
-"
-End
-tag
-had
-attributes
-.
-"
-class
-=
-"
-error
-"
->
-&
-lt
-;
-/
-<
-span
-class
-=
-"
-end
--
-tag
-"
->
-script
-<
-/
-span
->
-<
-span
-class
-=
-"
-attribute
--
-name
-"
->
-foo
-<
-/
-span
->
-=
-<
-a
-class
-=
-"
-attribute
--
-value
-"
->
-bar
-<
-/
-a
->
-&
-gt
-;
-<
-/
-span
->
-<
-span
->
-X
-<
-/
-span
->
-<
-/
-span
->
-<
-span
-id
->
-<
-span
->
-&
-lt
-;
-<
-span
-class
-=
-"
-start
--
-tag
-"
->
-script
-<
-/
-span
->
-&
-gt
-;
-<
-/
-span
->
-<
-span
->
-<
-/
-span
->
-<
-span
-title
-=
-"
-End
-tag
-had
-attributes
-.
-"
-class
-=
-"
-error
-"
->
-&
-lt
-;
-/
-<
-span
-class
-=
-"
-end
--
-tag
-"
->
-script
-<
-/
-span
->
-<
-span
-class
-=
-"
-attribute
--
-name
-"
->
-foo
-<
-/
-span
->
-=
-"
-<
-a
-class
-=
-"
-attribute
--
-value
-"
->
-bar
-<
-/
-a
->
-"
-&
-gt
-;
-<
-/
-span
->
-<
-span
->
-X
-<
-/
-span
->
-<
-/
-span
->
-<
-span
-id
->
-<
-span
->
-&
-lt
-;
-<
-span
-class
-=
-"
-start
--
-tag
-"
->
-script
-<
-/
-span
->
-&
-gt
-;
-<
-/
-span
->
-<
-span
->
-<
-/
-span
->
-<
-span
->
-&
-lt
-;
-!
-<
-/
-span
->
-<
-span
->
--
--
-<
-/
-span
->
-<
-span
->
-&
-lt
-;
-/
-<
-span
-class
-=
-"
-end
--
-tag
-"
->
-script
-<
-/
-span
->
-&
-gt
-;
-<
-/
-span
->
-<
-span
->
-X
-<
-/
-span
->
-<
-/
-span
->
-<
-span
-id
->
-<
-span
->
-&
-lt
-;
-<
-span
-class
-=
-"
-start
--
-tag
-"
->
-script
-<
-/
-span
->
-&
-gt
-;
-<
-/
-span
->
-<
-span
->
-<
-/
-span
->
-<
-span
->
-&
-lt
-;
-!
-<
-/
-span
->
-<
-span
->
--
--
-<
-/
-span
->
-<
-span
->
-&
-lt
-;
-/
-<
-span
-class
-=
-"
-end
--
-tag
-"
->
-script
-<
-/
-span
->
-&
-gt
-;
-<
-/
-span
->
-<
-span
->
-X
-<
-/
-span
->
-<
-/
-span
->
-<
-span
-id
->
-<
-span
->
-&
-lt
-;
-<
-span
-class
-=
-"
-start
--
-tag
-"
->
-script
-<
-/
-span
->
-&
-gt
-;
-<
-/
-span
->
-<
-span
->
-<
-/
-span
->
-<
-span
->
-&
-lt
-;
-!
-<
-/
-span
->
-<
-span
->
--
--
-<
-/
-span
->
-<
-span
->
-&
-lt
-;
-/
-<
-span
-class
-=
-"
-end
--
-tag
-"
->
-script
-<
-/
-span
->
-&
-gt
-;
-<
-/
-span
->
-<
-span
->
-X
-<
-/
-span
->
-<
-/
-span
->
-<
-span
-id
->
-<
-span
->
-&
-lt
-;
-<
-span
-class
-=
-"
-start
--
-tag
-"
->
-script
-<
-/
-span
->
-&
-gt
-;
-<
-/
-span
->
-<
-span
->
-<
-/
-span
->
-<
-span
->
-&
-lt
-;
-!
-<
-/
-span
->
-<
-span
->
--
--
-<
-/
-span
->
-<
-span
->
-&
-lt
-;
-/
-<
-span
-class
-=
-"
-end
--
-tag
-"
->
-script
-<
-/
-span
->
-<
-/
-span
->
-<
-/
-span
->
-<
-span
-id
->
->
-<
-span
->
-X
-<
-/
-span
->
-<
-/
-span
->
-<
-span
-id
->
-<
-span
->
-&
-lt
-;
-<
-span
-class
-=
-"
-start
--
-tag
-"
->
-script
-<
-/
-span
->
-&
-gt
-;
-<
-/
-span
->
-<
-span
->
-<
-/
-span
->
-<
-span
->
-&
-lt
-;
-!
-<
-/
-span
->
-<
-span
->
--
--
-<
-/
-span
->
-<
-span
-title
-=
-"
-End
-tag
-had
-attributes
-.
-"
-class
-=
-"
-error
-"
->
-&
-lt
-;
-/
-<
-span
-class
-=
-"
-end
--
-tag
-"
->
-script
-<
-/
-span
->
-<
-span
-class
-=
-"
-attribute
--
-name
-"
->
-foo
-<
-/
-span
->
-&
-gt
-;
-<
-/
-span
->
-<
-span
->
-X
-<
-/
-span
->
-<
-/
-span
->
-<
-span
-id
->
-<
-span
->
-&
-lt
-;
-<
-span
-class
-=
-"
-start
--
-tag
-"
->
-script
-<
-/
-span
->
-&
-gt
-;
-<
-/
-span
->
-<
-span
->
-<
-/
-span
->
-<
-span
->
-&
-lt
-;
-!
-<
-/
-span
->
-<
-span
->
--
--
 <
 /
 span
@@ -1416,16 +618,16 @@ span
 >
 X
 <
-/
-span
->
-<
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -1458,26 +660,6 @@ span
 <
 span
 >
-<
-/
-span
->
-<
-span
->
-&
-lt
-;
-!
-<
-/
-span
->
-<
-span
->
--
--
 <
 /
 span
@@ -1563,9 +745,390 @@ span
 >
 X
 <
+span
+id
+>
+<
 /
 span
 >
+<
+/
+span
+>
+<
+span
+>
+&
+lt
+;
+<
+span
+class
+=
+"
+start
+-
+tag
+"
+>
+script
+<
+/
+span
+>
+&
+gt
+;
+<
+/
+span
+>
+<
+span
+>
+<
+/
+span
+>
+<
+span
+>
+&
+lt
+;
+!
+<
+/
+span
+>
+<
+span
+>
+-
+-
+<
+/
+span
+>
+<
+span
+>
+&
+lt
+;
+/
+<
+span
+class
+=
+"
+end
+-
+tag
+"
+>
+script
+<
+/
+span
+>
+&
+gt
+;
+<
+/
+span
+>
+<
+span
+>
+X
+<
+span
+id
+>
+<
+/
+span
+>
+<
+/
+span
+>
+<
+span
+>
+&
+lt
+;
+<
+span
+class
+=
+"
+start
+-
+tag
+"
+>
+script
+<
+/
+span
+>
+&
+gt
+;
+<
+/
+span
+>
+<
+span
+>
+<
+/
+span
+>
+<
+span
+>
+&
+lt
+;
+!
+<
+/
+span
+>
+<
+span
+>
+-
+-
+<
+/
+span
+>
+<
+span
+>
+&
+lt
+;
+/
+<
+span
+class
+=
+"
+end
+-
+tag
+"
+>
+script
+<
+/
+span
+>
+&
+gt
+;
+<
+/
+span
+>
+<
+span
+>
+X
+<
+span
+id
+>
+<
+/
+span
+>
+<
+/
+span
+>
+<
+span
+>
+&
+lt
+;
+<
+span
+class
+=
+"
+start
+-
+tag
+"
+>
+script
+<
+/
+span
+>
+&
+gt
+;
+<
+/
+span
+>
+<
+span
+>
+<
+/
+span
+>
+<
+span
+>
+&
+lt
+;
+!
+<
+/
+span
+>
+<
+span
+>
+-
+-
+<
+/
+span
+>
+<
+span
+>
+&
+lt
+;
+/
+<
+span
+class
+=
+"
+end
+-
+tag
+"
+>
+script
+<
+/
+span
+>
+&
+gt
+;
+<
+/
+span
+>
+<
+span
+>
+X
+<
+span
+id
+>
+<
+/
+span
+>
+<
+/
+span
+>
+<
+span
+>
+&
+lt
+;
+<
+span
+class
+=
+"
+start
+-
+tag
+"
+>
+script
+<
+/
+span
+>
+&
+gt
+;
+<
+/
+span
+>
+<
+span
+>
+<
+/
+span
+>
+<
+span
+>
+&
+lt
+;
+!
+<
+/
+span
+>
+<
+span
+>
+-
+-
+<
+/
+span
+>
+<
+span
+>
+&
+lt
+;
+/
+<
+span
+class
+=
+"
+end
+-
+tag
+"
+>
+script
 <
 /
 span
@@ -1573,6 +1136,454 @@ span
 <
 span
 id
+>
+<
+/
+span
+>
+&
+gt
+;
+<
+/
+span
+>
+<
+span
+>
+X
+<
+span
+id
+>
+<
+/
+span
+>
+<
+/
+span
+>
+<
+span
+>
+&
+lt
+;
+<
+span
+class
+=
+"
+start
+-
+tag
+"
+>
+script
+<
+/
+span
+>
+&
+gt
+;
+<
+/
+span
+>
+<
+span
+>
+<
+/
+span
+>
+<
+span
+>
+&
+lt
+;
+!
+<
+/
+span
+>
+<
+span
+>
+-
+-
+<
+/
+span
+>
+<
+span
+title
+=
+"
+End
+tag
+had
+attributes
+.
+"
+class
+=
+"
+error
+"
+>
+&
+lt
+;
+/
+<
+span
+class
+=
+"
+end
+-
+tag
+"
+>
+script
+<
+/
+span
+>
+<
+span
+class
+=
+"
+attribute
+-
+name
+"
+>
+foo
+<
+/
+span
+>
+&
+gt
+;
+<
+/
+span
+>
+<
+span
+>
+X
+<
+span
+id
+>
+<
+/
+span
+>
+<
+/
+span
+>
+<
+span
+>
+&
+lt
+;
+<
+span
+class
+=
+"
+start
+-
+tag
+"
+>
+script
+<
+/
+span
+>
+&
+gt
+;
+<
+/
+span
+>
+<
+span
+>
+<
+/
+span
+>
+<
+span
+>
+&
+lt
+;
+!
+<
+/
+span
+>
+<
+span
+>
+-
+-
+<
+/
+span
+>
+<
+span
+title
+=
+"
+End
+tag
+had
+attributes
+.
+"
+class
+=
+"
+error
+"
+>
+&
+lt
+;
+/
+<
+span
+class
+=
+"
+end
+-
+tag
+"
+>
+script
+<
+/
+span
+>
+<
+span
+class
+=
+"
+attribute
+-
+name
+"
+>
+foo
+<
+/
+span
+>
+=
+<
+a
+class
+=
+"
+attribute
+-
+value
+"
+>
+bar
+<
+/
+a
+>
+&
+gt
+;
+<
+/
+span
+>
+<
+span
+>
+X
+<
+span
+id
+>
+<
+/
+span
+>
+<
+/
+span
+>
+<
+span
+>
+&
+lt
+;
+<
+span
+class
+=
+"
+start
+-
+tag
+"
+>
+script
+<
+/
+span
+>
+&
+gt
+;
+<
+/
+span
+>
+<
+span
+>
+<
+/
+span
+>
+<
+span
+>
+&
+lt
+;
+!
+<
+/
+span
+>
+<
+span
+>
+-
+-
+<
+/
+span
+>
+<
+span
+title
+=
+"
+End
+tag
+had
+attributes
+.
+"
+class
+=
+"
+error
+"
+>
+&
+lt
+;
+/
+<
+span
+class
+=
+"
+end
+-
+tag
+"
+>
+script
+<
+/
+span
+>
+<
+span
+class
+=
+"
+attribute
+-
+name
+"
+>
+foo
+<
+/
+span
+>
+=
+"
+<
+a
+class
+=
+"
+attribute
+-
+value
+"
+>
+bar
+<
+/
+a
+>
+"
+&
+gt
+;
+<
+/
+span
+>
+<
+span
+>
+X
+<
+span
+id
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -1664,16 +1675,16 @@ span
 >
 X
 <
-/
-span
->
-<
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -1766,16 +1777,16 @@ span
 >
 X
 <
-/
-span
->
-<
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -1871,16 +1882,16 @@ span
 >
 X
 <
-/
-span
->
-<
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -2001,16 +2012,16 @@ span
 >
 X
 <
-/
-span
->
-<
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -2136,16 +2147,16 @@ span
 >
 X
 <
-/
-span
->
-<
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -2268,16 +2279,16 @@ span
 >
 X
 <
-/
-span
->
-<
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -2403,16 +2414,16 @@ span
 >
 X
 <
-/
-span
->
-<
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -2539,16 +2550,16 @@ span
 >
 X
 <
-/
-span
->
-<
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -2677,16 +2688,16 @@ span
 >
 X
 <
-/
-span
->
-<
-/
-span
->
-<
 span
 id
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -2817,20 +2828,20 @@ span
 >
 X
 <
-/
-span
->
-<
-/
-span
->
-<
 span
 id
 >
 <
 /
 span
+>
+<
+/
+span
+>
+<
+/
+pre
 >
 <
 !
