--- a/parser/htmlparser/tests/reftest/bug910588-1-ref.html
+++ b/parser/htmlparser/tests/reftest/bug910588-1-ref.html
@@ -65,6 +65,9 @@ highlight
 style
 =
 "
+-
+moz
+-
 tab
 -
 size
@@ -73,7 +76,7 @@ size
 "
 >
 <
-span
+pre
 id
 =
 "
@@ -262,7 +265,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -276,6 +278,14 @@ line2
 <
 /
 span
+>
+<
+/
+span
+>
+<
+/
+pre
 >
 <
 /
