--- a/parser/htmlparser/tests/reftest/incomplete-xml-decl-ref.html
+++ b/parser/htmlparser/tests/reftest/incomplete-xml-decl-ref.html
@@ -102,7 +102,7 @@ size
 "
 >
 <
-span
+pre
 id
 =
 "
@@ -130,20 +130,16 @@ lt
 ?
 xml
 <
-/
-span
->
-<
-/
-span
->
-<
 span
 id
 =
 "
 line2
 "
+>
+<
+/
+span
 >
 <
 /
