--- a/parser/htmlparser/tests/reftest/view-source-bom-ref.html
+++ b/parser/htmlparser/tests/reftest/view-source-bom-ref.html
@@ -102,12 +102,19 @@ size
 "
 >
 <
-span
+pre
 id
 =
 "
 line1
 "
+>
+<
+span
+>
+<
+/
+span
 >
 <
 span
@@ -131,7 +138,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -141,6 +147,14 @@ id
 "
 line2
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -171,7 +185,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -181,6 +194,14 @@ id
 "
 line3
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -211,7 +232,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -221,6 +241,14 @@ id
 "
 line4
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -294,7 +322,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -304,6 +331,14 @@ id
 "
 line5
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -335,7 +370,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -345,6 +379,14 @@ id
 "
 line6
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -375,7 +417,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -385,6 +426,14 @@ id
 "
 line7
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -462,7 +511,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -472,6 +520,14 @@ id
 "
 line8
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -503,7 +559,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -513,6 +568,14 @@ id
 "
 line9
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -544,7 +607,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -558,6 +620,14 @@ line10
 <
 /
 span
+>
+<
+/
+span
+>
+<
+/
+pre
 >
 <
 /
