--- a/parser/htmlparser/tests/reftest/vs-after-head-after-1kb-ref.html
+++ b/parser/htmlparser/tests/reftest/vs-after-head-after-1kb-ref.html
@@ -106,12 +106,19 @@ size
 "
 >
 <
-span
+pre
 id
 =
 "
 line1
 "
+>
+<
+span
+>
+<
+/
+span
 >
 <
 span
@@ -135,7 +142,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -145,6 +151,14 @@ id
 "
 line2
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -175,7 +189,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -185,6 +198,14 @@ id
 "
 line3
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -314,7 +335,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -324,6 +344,14 @@ id
 "
 line4
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -355,7 +383,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -365,6 +392,14 @@ id
 "
 line5
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -446,7 +481,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -456,6 +490,14 @@ id
 "
 line6
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -486,7 +528,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -496,6 +537,14 @@ id
 "
 line7
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -712,7 +761,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -722,6 +770,14 @@ id
 "
 line8
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -790,7 +846,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -800,6 +855,14 @@ id
 "
 line9
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -895,7 +958,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -905,6 +967,14 @@ id
 "
 line10
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -936,7 +1006,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -950,6 +1019,14 @@ line11
 <
 /
 span
+>
+<
+/
+span
+>
+<
+/
+pre
 >
 <
 /
