--- a/parser/htmlparser/tests/reftest/vs-after-head-in-1kb-ref.html
+++ b/parser/htmlparser/tests/reftest/vs-after-head-in-1kb-ref.html
@@ -106,7 +106,7 @@ size
 "
 >
 <
-span
+pre
 id
 =
 "
@@ -142,7 +142,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -152,6 +151,14 @@ id
 "
 line2
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -182,7 +189,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -192,6 +198,14 @@ id
 "
 line3
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -321,7 +335,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -331,6 +344,14 @@ id
 "
 line4
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -362,7 +383,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -384,6 +404,14 @@ id
 "
 line6
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -465,7 +493,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -475,6 +502,14 @@ id
 "
 line7
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -505,7 +540,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -515,6 +549,14 @@ id
 "
 line8
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -731,7 +773,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -741,6 +782,14 @@ id
 "
 line9
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -809,7 +858,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -819,6 +867,14 @@ id
 "
 line10
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -914,7 +970,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -924,6 +979,14 @@ id
 "
 line11
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -955,7 +1018,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -969,6 +1031,14 @@ line12
 <
 /
 span
+>
+<
+/
+span
+>
+<
+/
+pre
 >
 <
 /
