--- a/parser/htmlparser/tests/reftest/vs-non-ascii-in-comment-before-ref.html
+++ b/parser/htmlparser/tests/reftest/vs-non-ascii-in-comment-before-ref.html
@@ -108,7 +108,7 @@ size
 "
 >
 <
-span
+pre
 id
 =
 "
@@ -144,7 +144,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -154,6 +153,14 @@ id
 "
 line2
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -184,7 +191,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -194,6 +200,14 @@ id
 "
 line3
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -327,7 +341,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -337,6 +350,14 @@ id
 "
 line4
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -362,7 +383,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -372,6 +392,14 @@ id
 "
 line5
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -437,7 +465,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -447,6 +474,14 @@ id
 "
 line6
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -478,7 +513,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -488,6 +522,14 @@ id
 "
 line7
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -518,7 +560,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -528,6 +569,14 @@ id
 "
 line8
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -604,7 +653,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -614,6 +662,14 @@ id
 "
 line9
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -682,7 +738,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -692,6 +747,14 @@ id
 "
 line10
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -787,7 +850,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -797,6 +859,14 @@ id
 "
 line11
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -828,7 +898,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -842,6 +911,14 @@ line12
 <
 /
 span
+>
+<
+/
+span
+>
+<
+/
+pre
 >
 <
 /
