--- a/parser/htmlparser/tests/reftest/xml-ref.html
+++ b/parser/htmlparser/tests/reftest/xml-ref.html
@@ -95,7 +95,7 @@ size
 "
 >
 <
-span
+pre
 id
 =
 "
@@ -216,7 +216,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -230,6 +229,14 @@ line2
 <
 /
 span
+>
+<
+/
+span
+>
+<
+/
+pre
 >
 <
 /
