--- a/parser/htmlparser/tests/reftest/xml-utf-ref.html
+++ b/parser/htmlparser/tests/reftest/xml-utf-ref.html
@@ -95,12 +95,19 @@ size
 "
 >
 <
-span
+pre
 id
 =
 "
 line1
 "
+>
+<
+span
+>
+<
+/
+span
 >
 <
 span
@@ -202,7 +209,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -216,6 +222,14 @@ line2
 <
 /
 span
+>
+<
+/
+span
+>
+<
+/
+pre
 >
 <
 /
