--- a/parser/htmlparser/tests/reftest/xml-without-tags-ref.html
+++ b/parser/htmlparser/tests/reftest/xml-without-tags-ref.html
@@ -102,7 +102,7 @@ size
 "
 >
 <
-span
+pre
 id
 =
 "
@@ -116,14 +116,6 @@ ill
 -
 formed
 <
-/
-span
->
-<
-/
-span
->
-<
 span
 id
 =
@@ -134,6 +126,14 @@ line2
 <
 /
 span
+>
+<
+/
+span
+>
+<
+/
+pre
 >
 <
 /
