--- a/parser/htmlparser/tests/reftest/bug1319410-1-ref.html
+++ b/parser/htmlparser/tests/reftest/bug1319410-1-ref.html
@@ -85,7 +85,7 @@ size
 "
 >
 <
-span
+pre
 id
 =
 "
@@ -121,7 +121,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -131,6 +130,14 @@ id
 "
 line2
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -158,7 +165,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -168,6 +174,14 @@ id
 "
 line3
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -231,20 +245,20 @@ span
 gt
 ;
 <
-/
-span
->
-<
-/
-span
->
-<
 span
 id
 =
 "
 line4
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -288,7 +302,6 @@ gt
 span
 >
 <
-/
 span
 >
 <
@@ -298,6 +311,14 @@ id
 "
 line5
 "
+>
+<
+/
+span
+>
+<
+/
+span
 >
 <
 span
@@ -323,14 +344,6 @@ lt
 gt
 ;
 <
-/
-span
->
-<
-/
-span
->
-<
 span
 id
 =
@@ -341,6 +354,14 @@ line6
 <
 /
 span
+>
+<
+/
+span
+>
+<
+/
+pre
 >
 <
 /
