Backed out 7 changesets (bug 1920160) for causing mochitests plain failures in test_videocontrols_vtt.html. CLOSED TREE
Backed out changeset 5d57a3a8d6aa (bug 1920160)
Backed out changeset d57f1f6f293b (bug 1920160)
Backed out changeset 8bfb6f9eab80 (bug 1920160)
Backed out changeset 45c61a69b9b8 (bug 1920160)
Backed out changeset b64bfe84e60a (bug 1920160)
Backed out changeset 26f7d594f6e0 (bug 1920160)
Backed out changeset 71d051b7857a (bug 1920160)

UltraBlame original commit: 2d0bfcdefdce0eb467d4e3b97cb3604f7b9d977a

--- a/testing/web-platform/tests/css/css-grid/alignment/grid-baseline-align-001.html
+++ b/testing/web-platform/tests/css/css-grid/alignment/grid-baseline-align-001.html
@@ -359,7 +359,7 @@ right
 ;
 top
 :
-24px
+0px
 ;
 bottom
 :
@@ -466,13 +466,10 @@ div
 >
 <
 div
-style
+class
 =
 "
-height
-:
-10px
-;
+stretch
 "
 >
 &
