Bug 1928422 [wpt PR 48910] - Add more customizable-<select> appearance oscillation tests, a=testonly
Automatic update from web-platform-tests
Add more customizable-<select> appearance oscillation tests

Changing the `appearance` value while the picker is open causes
issues, so be sure any changes to `appearance` close the picker.
This adds further tests that switch appearance via CSS, to ensure
there aren't cycles in style code.

The tests all currently fail. Code needs to be added to close the
picker when the appearance value changes on either the base control
or the picker while the picker is open. There also seem to be
invalidation bugs, e.g. this error `picker should open when clicked
expected true got false` indicates that even though the `appearance`
value is correct in one of the tests, the select cannot be opened.

It appears that some of the linked crash bugs may no longer get hit.

Bug: 40146374,376097114,364924715,364924718
Change-Id: I1a4a0d342ee724f97755ceb49e855becaee40bab
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5973354
Auto-Submit: Mason Freed <masonfchromium.org>
Commit-Queue: Joey Arhar <jarharchromium.org>
Reviewed-by: Joey Arhar <jarharchromium.org>
Cr-Commit-Position: refs/heads/main{#1376283}

--

wpt-commits: d68850d70cd59c374655655d6792e0d2cac3d177
wpt-pr: 48910

UltraBlame original commit: dea5434798802678a3062bf6f6a083412a0c3ea7

--- a/testing/web-platform/tests/html/semantics/forms/the-select-element/customizable-select/switch-picker-appearance.tentative.html
+++ b/testing/web-platform/tests/html/semantics/forms/the-select-element/customizable-select/switch-picker-appearance.tentative.html
@@ -165,46 +165,10 @@ js
 script
 >
 <
-style
->
-:
-:
-picker
-(
 select
-)
-{
-background
--
-color
-:
-red
-;
-}
-:
-:
-picker
-(
-select
-)
-:
-popover
--
-open
-{
-background
--
-color
-:
-green
-;
-}
-<
-/
-style
->
-<
-select
+id
+=
+test1
 style
 =
 "
@@ -236,10 +200,55 @@ option
 select
 >
 <
+style
+>
+select
+#
+test1
+:
+:
+picker
+(
+select
+)
+{
+background
+-
+color
+:
+red
+;
+}
+select
+#
+test1
+:
+:
+picker
+(
+select
+)
+:
+popover
+-
+open
+{
+background
+-
+color
+:
+green
+;
+}
+<
+/
+style
+>
+<
 script
 >
 const
-select
+select1
 =
 document
 .
@@ -247,6 +256,8 @@ querySelector
 (
 '
 select
+#
+test1
 '
 )
 ;
@@ -323,7 +334,7 @@ assert_equals
 (
 getComputedStyle
 (
-select
+select1
 '
 :
 :
@@ -344,7 +355,7 @@ assert_equals
 (
 getComputedStyle
 (
-select
+select1
 '
 :
 :
@@ -383,7 +394,7 @@ assert_equals
 (
 getComputedStyle
 (
-select
+select1
 '
 :
 :
@@ -406,7 +417,7 @@ assert_equals
 (
 getComputedStyle
 (
-select
+select1
 '
 :
 :
@@ -449,7 +460,7 @@ NotAllowedError
 )
 =
 >
-select
+select1
 .
 showPicker
 (
@@ -464,7 +475,7 @@ activation
 ;
 assert_false
 (
-select
+select1
 .
 matches
 (
@@ -485,7 +496,7 @@ showPicker
 '
 )
 ;
-select
+select1
 .
 showPicker
 (
@@ -493,7 +504,7 @@ showPicker
 ;
 assert_true
 (
-select
+select1
 .
 matches
 (
@@ -508,7 +519,7 @@ assert_equals
 (
 getComputedStyle
 (
-select
+select1
 '
 :
 :
@@ -531,7 +542,7 @@ assert_equals
 (
 getComputedStyle
 (
-select
+select1
 '
 :
 :
@@ -563,12 +574,12 @@ picker
 await
 clickOn
 (
-select
+select1
 )
 ;
 assert_false
 (
-select
+select1
 .
 matches
 (
@@ -583,7 +594,7 @@ assert_equals
 (
 getComputedStyle
 (
-select
+select1
 '
 :
 :
@@ -664,7 +675,7 @@ assert_equals
 (
 getComputedStyle
 (
-select
+select1
 '
 :
 :
@@ -703,7 +714,7 @@ assert_equals
 (
 getComputedStyle
 (
-select
+select1
 '
 :
 :
@@ -730,7 +741,7 @@ showPicker
 '
 )
 ;
-select
+select1
 .
 showPicker
 (
@@ -740,7 +751,7 @@ assert_equals
 (
 getComputedStyle
 (
-select
+select1
 '
 :
 :
@@ -772,12 +783,12 @@ picker
 await
 clickOn
 (
-select
+select1
 )
 ;
 assert_false
 (
-select
+select1
 .
 matches
 (
@@ -851,7 +862,7 @@ assert_equals
 (
 getComputedStyle
 (
-select
+select1
 '
 :
 :
@@ -890,7 +901,7 @@ assert_equals
 (
 getComputedStyle
 (
-select
+select1
 '
 :
 :
@@ -917,7 +928,7 @@ showPicker
 '
 )
 ;
-select
+select1
 .
 showPicker
 (
@@ -927,7 +938,7 @@ assert_equals
 (
 getComputedStyle
 (
-select
+select1
 '
 :
 :
@@ -959,12 +970,12 @@ picker
 await
 clickOn
 (
-select
+select1
 )
 ;
 assert_false
 (
-select
+select1
 .
 matches
 (
@@ -1038,7 +1049,7 @@ assert_equals
 (
 getComputedStyle
 (
-select
+select1
 '
 :
 :
@@ -1092,7 +1103,7 @@ assert_equals
 (
 getComputedStyle
 (
-select
+select1
 '
 :
 :
@@ -1121,7 +1132,7 @@ showPicker
 '
 )
 ;
-select
+select1
 .
 showPicker
 (
@@ -1129,7 +1140,7 @@ showPicker
 ;
 assert_false
 (
-select
+select1
 .
 matches
 (
@@ -1159,7 +1170,7 @@ assert_equals
 (
 getComputedStyle
 (
-select
+select1
 '
 :
 :
@@ -1189,7 +1200,7 @@ resolve
 ;
 assert_false
 (
-select
+select1
 .
 matches
 (
@@ -1228,7 +1239,7 @@ resolve
 ;
 assert_false
 (
-select
+select1
 .
 matches
 (
@@ -1270,7 +1281,7 @@ resolve
 ;
 assert_false
 (
-select
+select1
 .
 matches
 (
@@ -1361,7 +1372,7 @@ assert_equals
 (
 getComputedStyle
 (
-select
+select1
 '
 :
 :
@@ -1400,7 +1411,7 @@ assert_equals
 (
 getComputedStyle
 (
-select
+select1
 '
 :
 :
@@ -1429,7 +1440,7 @@ showPicker
 '
 )
 ;
-select
+select1
 .
 showPicker
 (
@@ -1437,7 +1448,7 @@ showPicker
 ;
 assert_true
 (
-select
+select1
 .
 matches
 (
@@ -1456,7 +1467,7 @@ remove
 ;
 assert_false
 (
-select
+select1
 .
 matches
 (
@@ -1483,7 +1494,7 @@ assert_equals
 (
 getComputedStyle
 (
-select
+select1
 '
 :
 :
@@ -1514,6 +1525,990 @@ should
 close
 the
 picker
+'
+)
+;
+<
+/
+script
+>
+<
+button
+id
+=
+reset
+>
+Reset
+<
+/
+button
+>
+<
+select
+id
+=
+test2
+>
+<
+button
+>
+<
+selectedoption
+>
+<
+/
+selectedoption
+>
+<
+/
+button
+>
+<
+option
+>
+option
+one
+<
+/
+option
+>
+<
+option
+>
+option
+two
+<
+/
+option
+>
+<
+option
+>
+option
+three
+<
+/
+option
+>
+<
+/
+select
+>
+<
+style
+>
+select
+#
+test2
+:
+:
+picker
+(
+select
+)
+{
+appearance
+:
+base
+-
+select
+;
+}
+select
+#
+test2
+.
+controlswitch
+:
+open
+{
+appearance
+:
+auto
+;
+}
+select
+#
+test2
+.
+pickerswitch
+:
+open
+:
+:
+picker
+(
+select
+)
+{
+appearance
+:
+auto
+;
+}
+<
+/
+style
+>
+<
+script
+>
+const
+select2
+=
+document
+.
+querySelector
+(
+'
+select
+#
+test2
+'
+)
+;
+const
+secondOption
+=
+select2
+.
+querySelector
+(
+'
+option
+:
+nth
+-
+of
+-
+type
+(
+2
+)
+'
+)
+;
+promise_test
+(
+async
+(
+t
+)
+=
+>
+{
+assert_false
+(
+select2
+.
+matches
+(
+'
+:
+open
+'
+)
+'
+setup
+'
+)
+;
+assert_equals
+(
+select2
+.
+value
+'
+option
+one
+'
+)
+;
+assert_equals
+(
+getComputedStyle
+(
+select2
+)
+.
+appearance
+'
+base
+-
+select
+'
+)
+;
+await
+test_driver
+.
+click
+(
+select2
+)
+;
+assert_true
+(
+select2
+.
+matches
+(
+'
+:
+open
+'
+)
+'
+picker
+should
+open
+when
+clicked
+'
+)
+;
+assert_equals
+(
+secondOption
+.
+textContent
+'
+option
+two
+'
+)
+;
+await
+test_driver
+.
+click
+(
+secondOption
+)
+;
+assert_false
+(
+select2
+.
+matches
+(
+'
+:
+open
+'
+)
+)
+;
+assert_equals
+(
+select2
+.
+value
+'
+option
+two
+'
+)
+;
+}
+'
+Test
+of
+the
+test
+harness
+'
+)
+;
+promise_test
+(
+async
+(
+t
+)
+=
+>
+{
+assert_false
+(
+select2
+.
+matches
+(
+'
+:
+open
+'
+)
+'
+setup
+'
+)
+;
+assert_equals
+(
+select2
+.
+className
+'
+'
+)
+;
+assert_equals
+(
+getComputedStyle
+(
+select2
+)
+.
+appearance
+'
+base
+-
+select
+'
+)
+;
+await
+test_driver
+.
+click
+(
+select2
+)
+;
+assert_true
+(
+select2
+.
+matches
+(
+'
+:
+open
+'
+)
+'
+picker
+should
+open
+when
+clicked
+'
+)
+;
+assert_equals
+(
+getComputedStyle
+(
+select2
+)
+.
+appearance
+'
+base
+-
+select
+'
+)
+;
+await
+test_driver
+.
+click
+(
+secondOption
+)
+;
+/
+/
+Choose
+an
+option
+assert_false
+(
+select2
+.
+matches
+(
+'
+:
+open
+'
+)
+)
+;
+t
+.
+add_cleanup
+(
+(
+)
+=
+>
+select2
+.
+removeAttribute
+(
+'
+class
+'
+)
+)
+;
+select2
+.
+classList
+.
+add
+(
+'
+controlswitch
+'
+)
+;
+assert_false
+(
+select2
+.
+matches
+(
+'
+:
+open
+'
+)
+)
+;
+assert_equals
+(
+getComputedStyle
+(
+select2
+)
+.
+appearance
+'
+base
+-
+select
+'
+'
+appearance
+should
+not
+have
+changed
+yet
+'
+)
+;
+await
+test_driver
+.
+click
+(
+select2
+)
+;
+assert_false
+(
+select2
+.
+matches
+(
+'
+:
+open
+'
+)
+'
+picker
+should
+get
+closed
+when
+the
+appearance
+value
+changes
+'
+)
+;
+assert_equals
+(
+getComputedStyle
+(
+select2
+)
+.
+appearance
+'
+base
+-
+select
+'
+'
+appearance
+should
+be
+back
+to
+base
+-
+select
+'
+)
+;
+}
+'
+The
+select
+picker
+is
+closed
+if
+the
+<
+select
+>
+appearance
+value
+is
+changed
+via
+CSS
+while
+the
+picker
+is
+open
+'
+)
+;
+promise_test
+(
+async
+(
+t
+)
+=
+>
+{
+assert_false
+(
+select2
+.
+matches
+(
+'
+:
+open
+'
+)
+'
+setup
+'
+)
+;
+assert_equals
+(
+select2
+.
+className
+'
+'
+)
+;
+assert_equals
+(
+getComputedStyle
+(
+select2
+)
+.
+appearance
+'
+base
+-
+select
+'
+)
+;
+await
+test_driver
+.
+click
+(
+select2
+)
+;
+assert_true
+(
+select2
+.
+matches
+(
+'
+:
+open
+'
+)
+'
+picker
+should
+open
+when
+clicked
+'
+)
+;
+assert_equals
+(
+getComputedStyle
+(
+select2
+)
+.
+appearance
+'
+base
+-
+select
+'
+)
+;
+await
+test_driver
+.
+click
+(
+secondOption
+)
+;
+/
+/
+Choose
+an
+option
+assert_false
+(
+select2
+.
+matches
+(
+'
+:
+open
+'
+)
+)
+;
+t
+.
+add_cleanup
+(
+(
+)
+=
+>
+select2
+.
+removeAttribute
+(
+'
+class
+'
+)
+)
+;
+select2
+.
+classList
+.
+add
+(
+'
+pickerswitch
+'
+)
+;
+await
+test_driver
+.
+click
+(
+select2
+)
+;
+assert_false
+(
+select2
+.
+matches
+(
+'
+:
+open
+'
+)
+'
+picker
+should
+get
+closed
+when
+the
+appearance
+value
+changes
+'
+)
+;
+assert_equals
+(
+getComputedStyle
+(
+select2
+)
+.
+appearance
+'
+base
+-
+select
+'
+'
+appearance
+should
+be
+back
+to
+base
+-
+select
+'
+)
+;
+}
+'
+The
+select
+picker
+is
+closed
+if
+the
+:
+:
+picker
+(
+)
+appearance
+value
+is
+changed
+via
+CSS
+while
+the
+picker
+is
+open
+'
+)
+;
+promise_test
+(
+async
+(
+t
+)
+=
+>
+{
+assert_false
+(
+select2
+.
+matches
+(
+'
+:
+open
+'
+)
+'
+setup
+'
+)
+;
+assert_equals
+(
+select2
+.
+className
+'
+'
+)
+;
+assert_equals
+(
+getComputedStyle
+(
+select2
+)
+.
+appearance
+'
+base
+-
+select
+'
+)
+;
+await
+test_driver
+.
+click
+(
+select2
+)
+;
+assert_true
+(
+select2
+.
+matches
+(
+'
+:
+open
+'
+)
+'
+picker
+should
+open
+when
+clicked
+'
+)
+;
+assert_equals
+(
+getComputedStyle
+(
+select2
+)
+.
+appearance
+'
+base
+-
+select
+'
+)
+;
+t
+.
+add_cleanup
+(
+(
+)
+=
+>
+select2
+.
+removeAttribute
+(
+'
+style
+'
+)
+)
+;
+select2
+.
+setAttribute
+(
+'
+style
+'
+'
+appearance
+:
+auto
+'
+)
+;
+assert_false
+(
+select2
+.
+matches
+(
+'
+:
+open
+'
+)
+'
+Adding
+inline
+style
+should
+close
+the
+picker
+'
+)
+;
+assert_equals
+(
+getComputedStyle
+(
+select2
+)
+.
+appearance
+'
+auto
+'
+'
+appearance
+should
+still
+be
+auto
+from
+inline
+style
+'
+)
+;
+}
+'
+The
+select
+picker
+is
+closed
+if
+the
+<
+select
+>
+inline
+appearance
+value
+is
+changed
+while
+the
+picker
+is
+open
 '
 )
 ;
